# wolke

./: .gitignore  Cargo.toml  README.md
crates/scoped-fs/: Cargo.toml
crates/scoped-fs/src/: error.rs  lib.rs
frontend/: deno.json  index.html  tsconfig.json  vite.config.ts
frontend/src/: dav-client.ts  file-browser.ts  index.css  vite-env.d.ts
src/: app.rs  config.rs  filesystem.rs  main.rs
src/dav/: error.rs  mod.rs
src/dav/fs/: mod.rs
src/dav/fs/methods/: copy.rs  delete.rs  get.rs  mkcol.rs  mod.rs  mv.rs  put.rs
src/frontend/: mod.rs
templates/pages/: browse.html
