[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A file server experiment with WebDAV"
repository = "https://github.com/lennart-k/wolke"

[package]
name = "wolke"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
resolver = "2"
publish = false

[features]
default = ["debug"]
debug = ["opentelemetry"]
opentelemetry = [
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-semantic-conventions",
  "dep:tracing-opentelemetry",
]

[workspace]
members = ["crates/*"]

[dependencies]
rustical_dav.workspace = true
rustical_xml.workspace = true
scoped-fs.workspace = true
axum = "0.8"
tower = "0.5"
httpdate = "1.0"
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
derive_more.workspace = true
clap.workspace = true
figment.workspace = true
quick-xml.workspace = true
mime_guess = "2.0"
futures-core = "0.3"
futures = "0.3"
percent-encoding = "2.3"
http.workspace = true
bitflags = "2.9"
mime = "0.3"
headers = "0.4"
axum-extra = { version = "0.12", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["trace", "fs", "normalize-path"] }

opentelemetry = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", optional = true, features = [
  "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.31", features = [
  "rt-tokio",
], optional = true }
opentelemetry-semantic-conventions = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "registry",
] }
tracing.workspace = true

[workspace.dependencies]
rustical_dav = { git = "https://github.com/lennart-k/rustical", tag = "v0.12.8" }
rustical_xml = { git = "https://github.com/lennart-k/rustical", tag = "v0.12.8" }
scoped-fs = { path = "./crates/scoped-fs/" }
async-trait = "0.1"
anyhow = { version = "1.0", features = ["backtrace"] }
serde = { version = "1.0", features = ["serde_derive", "derive", "rc"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = [
  "net",
  "tracing",
  "macros",
  "rt-multi-thread",
  "full",
] }
url = "2.5"
base64 = "0.22"
thiserror = "2.0"
quick-xml = { version = "0.39" }
derive_more = { version = "2.0", features = [
  "from",
  "try_into",
  "into",
  "deref",
  "constructor",
] }
askama = { version = "0.15", features = ["serde_json"] }
clap = { version = "4.5", features = ["derive", "env"] }
figment = { version = "0.10", features = ["env", "toml"] }
tracing = "0.1"
http = "1.3"
